--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
     "p-queue": "^8.0.1",
+    "unzipper": "^0.12.3",
     "uuid": "^10.0.0",
     "xlsx": "^0.18.5"
   },
